--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dill==0.3.6
 idna==3.4
 isort==5.10.1
 lazy-object-proxy==1.8.0
+loguru==0.6.0
 mccabe==0.7.0
 oauthlib==3.2.2
 platformdirs==2.5.4
@@ -15,4 +16,5 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 tomlkit==0.11.6
 urllib3==1.26.12
+win32-setctime==1.1.0
 wrapt==1.14.1
